# deep-learning-models

./: .gitignore  main.py  pyproject.toml
api/: yolo_api.py
models/cv/: hand_data.csv  mediapipe_data.py  mediapipe_face.py  mediapipe_hand.py  mediapipe_pose.py  mediapipe_predict_hand.py  mediapipe_train.ipynb  opencv.ipynb  rcp.pkl  video_opencv.py  youtube_opencv.py
models/ocr/: ocr.ipynb
models/ocr/output/: webtoon_res.json
models/sam/: requirements.txt  sam.ipynb
models/yolo/: yolo.ipynb  yolo.py
models/yolo/dog-and-cat-1/: README.dataset.txt  README.roboflow.txt  data.yaml
models/yolo/dog-and-cat-1/test/labels/: c_10_jpg.rf.3088efcbe2fc99ba7e842c820e5a97fa.txt  c_15_jpg.rf.c99c88bcf552e240a0ae890f6cdc4c02.txt  c_2_jpeg.rf.2018e6f10c4e9e090d642cb842f38b42.txt
models/yolo/dog-and-cat-1/train/: labels.cache
models/yolo/dog-and-cat-1/train/labels/: c_13_jpg.rf.55d340829c334f9bdd2d82aaa9ac7bac.txt  c_14_jpg.rf.892ab92c52b0454c6fe390ed87eb1287.txt  c_1_jpg.rf.5ff81027cb01564cb6ce4b0cacc4de49.txt  c_3_jpg.rf.ab3a4e8d4386eccc4e72ec662db879f2.txt  c_4_jpeg.rf.2bbfb5b4e9ff33c2f68b081bcedde355.txt  c_5_jpg.rf.5a71da9aa6228a52bb6226b4efae2388.txt  c_6_jpeg.rf.70394a9766fdbfea05653622f0e0885e.txt  c_7_jpg.rf.1735a99591de048316a1dbaf30f04aad.txt  c_8_jpeg.rf.0b34b4301ac5fa758a55091e1962fdd4.txt  c_9_png.rf.ade98c5de64c711b254d3d810e2a0f6d.txt  image_10_jpg.rf.7bf34c95a266bd7091ed232d03b773da.txt  image_13_jpg.rf.d6f2109c87af994207c6e5465a11e9a8.txt  image_14_jpg.rf.0f1820c2d487ec97d8e9e16a36225c04.txt  (+8 more)
models/yolo/dog-and-cat-1/valid/: labels.cache
(+6 files in other folders)
