[project]
name = "deep-learning-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.1.1",
    "roboflow>=1.2.7",
    "translate>=3.6.1",
    "ultralytics>=8.3.191",
    "yt-dlp>=2025.8.27",
]
