[project]
name = "deep-learning-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.1.1",
    "pandas>=2.3.2",
    "roboflow>=1.2.7",
    "scikit-learn>=1.7.1",
    "translate>=3.6.1",
    "ultralytics>=8.3.191",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
    "yt-dlp>=2025.8.27",
]
